Fixed footer alignment

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -459,6 +459,7 @@ a:active {
   border-radius: 50%;
   margin: 0 15px;
   color: var(--red-wine-primary);
+  font-size: 15px;
   font-weight: bold;
   border-style: dashed;
   border-width: 1px 1px 1px 1px;
@@ -478,7 +479,7 @@ a:active {
   align-items: center;
   text-align: center;
   padding-left: 1px;
-  line-height: 20px;
+  line-height: 22px;
 }
 
 .simbolo {
@@ -496,7 +497,7 @@ a:active {
   align-items: center;
   justify-content: center;
   padding-left: 1px;
-  line-height: 16px;
+  line-height: 15px;
 }
 
 #link-interno {
